# jtl

./: .travis.yml  CMakeLists.txt
ci/: run_tests.sh
include/jtl/: type_traits.hpp
include/jtl/type_traits/: constants.hpp  mutations.hpp
tests/: CMakeLists.txt  test_main.cpp  test_type_trait_constants.cpp  test_type_trait_mutations.cpp
